# Bloxorz-DDQN

./: .gitignore  LICENSE  README.md  pyproject.toml
src/envs/: __init__.py  bloxorz_env.py
src/envs/levels/: level_01.txt  level_02.txt  level_02_meta.json  level_03.txt  level_04.txt  level_05.txt  level_05_meta.json  level_06.txt  level_07.txt  level_07_meta.json  level_08.txt  level_08_meta.json  level_09.txt  level_09_meta.json  level_10.txt  level_10_meta.json  level_11.txt  level_11_meta.json  level_12.txt  level_12_meta.json  level_13.txt  level_14.txt  level_14_meta.json  level_15.txt  level_15_meta.json  level_16.txt  level_16_meta.json  level_17.txt  level_17_meta.json  level_18.txt  level_18_meta.json  level_19.txt  level_19_meta.json  level_20.txt  level_20_meta.json  level_21.txt  level_21_meta.json  level_22.txt  level_22_meta.json  level_23.txt  (+21 more)
src/scripts/: test_env.py
src/utils/: block.py  level_loader.py  renderer.py
src/web/: server.py
src/web/static/: index.html  style.css
src/web/static/js/: app.js  renderer.js
